Fix remaining 500 error: cap percent values at 100, add CSS overflow:hidden, guard useitem.php division

--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@
     border-style: solid;
     border-color: #000000;
     background-color: #666666;
+    overflow: hidden;
 }
 
 .bar_b {
